  - A button's additional frame layers will now automatically update their levels when Button:SetFrameLevel() is called.
  - Removed the redundant code for SetTextColor() and SetVertexColor() since they apparently work as they should.
  - More code optimization. (Scope: It's not just for bad breath.)
- Skin API
  - The "Border" layer no longer supports the "Color" attribute. Instead, a new attribute, "Colors", is available that allows the skin author to specify a border color for each type of button. (See the notes above on button types)
- ButtonFacade GUI:
  - The ButtonFacade GUI has been reworked a little and tool tips should now be slight more descriptive.
  - Layers that are disabled in the skin definition will now show their respective options as disabled in the GUI.
  - The new "Border Color" options will only be enabled for groups that have at least one button with its type set.
- Miscellaneous:
  - ButtonFacade will no longer be registered in the global namespace. Authors will have to use AceAddOn or IsAddOnLoaded() to check for it.
  - Removed AceLocale.

3.3.300

- Update ToC to 3.3.
- Switch to GetObjectType since GetFrameType was removed.
- Copy esES to esMX localization to eliminate the hard-coded force use of esES for esMX.

3.2.85

- Fixed a library typo.
- Adjusted the format and file name of the change log.
- Localization update.

3.2.275

- Fixed an erroneous library reference.
- Fixed a core entry.
- Updated ToC for 3.2.
- Localization update.

3.1.270

- Removed the "About" panel.
- Added an "About" file.
- Localization clean up and update.
- Packager tweaks.

3.1.260

- Module support removed. If you run into issues with an add-on you're using, ask the author to fix their add-on.

3.1.255

ButtonFacade GUI:
- ButtonFacade will now attempt to remember the global skin settings. To be clear, it will only remember the *global* setting. It is still up to add-on authors to save the skin settings for their own add-on's root group.